@@ -31,7 +31,7 @@ Collect test suites from several test scripts and run contained testcases.
 import unittest
 import test_afeditor_createartefacts, test_afeditor_verifyartefactlists
 import test_afeditor_statistics, test_afeditor_verifyartefactcontents
-import test_afeditor_deleteartefacts
+import test_afeditor_deleteartefacts, test_afeditor_editartefacts
 
 suitelist = []
 suitelist.append(test_afeditor_createartefacts.getSuite())
@@ -39,6 +39,7 @@ suitelist.append(test_afeditor_verifyartefactlists.getSuite())
 suitelist.append(test_afeditor_verifyartefactcontents.getSuite())
 suitelist.append(test_afeditor_statistics.getSuite())
 suitelist.append(test_afeditor_deleteartefacts.getSuite())
+suitelist.append(test_afeditor_editartefacts.getSuite())
 suite  = unittest.TestSuite(suitelist)
 
 unittest.TextTestRunner(verbosity=2).run(suite)
